asg/tests/fail/integers/i16/negate_min.leo
function main() {
    let a = -32768i16;
    let b = -a;
}